--- a/components/view_company.html
+++ b/components/view_company.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Job || About</title>
+    <title>Job || View Company</title>
 </head>
 
 <body>
@@ -27,42 +27,54 @@
         </div>
     </header>
 
-    <section>
-        <div class="about-image">
-            <img src="../public/images/Programming-about.png" alt="">
-        </div>
-    </section>
-
-    <section class="about-info">
-        <div class="containeer-about-info">
-            <h1>Why Choose Us?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod aliquam nesciunt perferendis, quas
-                consequuntur laudantium adipisci aspernatur dignissimos eius! Corporis aliquid expedita animi
-                reprehenderit sit itaque sequi qui eveniet quam, temporibus similique consequatur laborum voluptatum
-                veniam, obcaecati delectus corrupti. Illum?</p>
-                <button class="btn">Contact Us</button>
-        </div>
-    </section>
-
-        <section class="info-me">
-            <div class="container-info-me">
-                <div class="box-info-me">
-                    <i class="fa-regular fa-envelope"></i>
-                    <h4>our email</h4>
-                    <p>mohamed_shams@email.com</p>
+    <section class="details-job">
+        <h1 class="heading-all">job details</h1>
+        <div class="container-details-job">
+            <div class="box-details-job">
+                <h3>Senior Web Designer</h3>
+                <p class="name">IT infosys co.</p>
+                <p class="loaction"><i class="fa-solid fa-location-dot"></i> Egypt - cairo</p>
+                <div class="salary">
+                    <div class="box-salary">
+                        <h4>Salary</h4>
+                        <p>10k - 23k $ month</p>
+                    </div>
+                    <div class="box-salary">
+                        <h4>Benefite</h4>
+                        <p>work from home, health insurance</p>
+                    </div>
+                    <div class="box-salary">
+                        <h4>job Type</h4>
+                        <p>part-time</p>
+                    </div>
+                    <div class="box-salary">
+                        <h4>schedule</h4>
+                        <p>day shift</p>
+                    </div>
                 </div>
-                <div class="box-info-me">
-                    <i class="fas fa-light fa-phone"></i>
-                    <h4>our phone</h4>
-                    <p>+201061242066</p>
-                </div>
-                <div class="box-info-me">
-                    <i class="fas fa-regular fa-location-dot"></i>
-                    <h4>our location</h4>
-                    <p>Egypt - cairo - Nase City</p>
+                <h3>requirements</h3>
+                <p class="dot">. education: graduate</p>
+                <p class="dot">. age: 23+</p>
+                <p class="dot">. language: Arabic,English</p>
+                <p class="dot">. experience: 3+ years</p>
+                <h3>qualifications</h3>
+                <p class="dot">. Bachelor's (preferred)</p>
+                <p class="dot">. PHP: 1 year (preferred)</p>
+                <p class="dot">. Web design: 1 year (preferred)</p>
+                <p class="dot">. WordPress: 1 year (preferred)</p>
+                <p class="dot">. total work: 3 year (preferred)</p>
+                <h3>job Description</h3>
+                <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora incidunt eveniet, voluptatibus pariatur quasi quam laboriosam accusantium quo nemo debitis!</p>
+                <p class="dot">. Hiring 2 condidate for this role</p>
+                <p class="dot">. posted 2 days ago</p>
+                <div class="btns">
+                    <button class="btn">Apply Now</button>
+                    <button class="btn-heard"><i class="fa-regular fa-heart"></i> save job</button>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+
 
     <footer>
         <div class="container-footer">
