--- a/components/all_jobs.html
+++ b/components/all_jobs.html
@@ -1,114 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Job</title>
+    <title>Job || All Jobs</title>
 </head>
+
 <body>
-    
+
     <header>
         <div class="wrapper">
             <i class="fa-solid fa-ellipsis-vertical" id="menu"></i>
-            <a href="index.html"><i class="fa-solid fa-briefcase"></i> <span>Job</span>Found</a>
+            <a href="../index.html"><i class="fa-solid fa-briefcase"></i> <span>Job</span>Found</a>
             <nav class="navber">
-                <a href="index.html">Home</a>
-                <a href="components/about.html">About Us</a>
-                <a href="components/all_jobs.html">All Jobs</a>
-                <a href="components/contact.html">Contact Us</a>
-                <a href="components/acount.html">Account</a>
+                <a href="../index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="all_jobs.html">All Jobs</a>
+                <a href="contact.html">Contact Us</a>
+                <a href="acount.html">Account</a>
             </nav>
             <button class="btn">Post Jobs</button>
         </div>
     </header>
 
-
-    <div class="home-container">
-        <section class="home">
+    <section class="filter-job">
+        <h1 class="heading-all">Filter jobs</h1>
+        <div class="container-filter">
             <form action="#" method="post">
-                <h3>find your next job</h3>
-                <p>job title<span>*</span></p>
-                <input type="text" name="title" placeholder="Keyword, category or company" required maxlength="20" class="inpot">
-                <p>job location<span>*</span></p>
-                <input type="text" name="location" placeholder="City, state or country" required maxlength="50" class="inpot">
-                <input type="submit" value="search job" class="btn">
+                <div class="flex">
+                    <div class="box">
+                        <p>job title<span>*</span></p>
+                        <input type="text" name="title" placeholder="Keyword, category or company" class="input">
+                    </div>
+                    <div class="box">
+                        <p>job location<span>*</span></p>
+                        <input type="text" name="location" placeholder="City, state or country" required maxlength="50" class="input">
+                    </div>
+                </div>
+                <div class="dropdown-container">
+                    <div class="dropdown">
+                        <input type="text" readonly class="output" placeholder="date posted" name="date" maxlength="20">
+                        <div class="lists">
+                            <p class="items">today</p>
+                            <p class="items">1 day age</p>
+                            <p class="items">3 days age</p>
+                            <p class="items">5 days age</p>
+                            <p class="items">9 days age</p>
+                            <p class="items">11 days age</p>
+                            <p class="items">12 days age</p>
+                            <p class="items">16 days age</p>
+                            <p class="items">20 days age</p>
+                            <p class="items">25 days age</p>
+                            <p class="items">30 days age</p>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <input type="text" readonly class="output" placeholder="work shifts" name="date" maxlength="20">
+                        <div class="lists">
+                            <p class="items">day shift</p>
+                            <p class="items">night shift</p>
+                            <p class="items">flxedible shift</p>
+                            <p class="items">flxed shift</p>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <input type="text" readonly class="output" placeholder="education level" name="date" maxlength="20">
+                        <div class="lists">
+                            <p class="items">10th pass</p>
+                            <p class="items">12th pass</p>
+                            <p class="items">bachlelor's degree</p>
+                            <p class="items">master's degree</p>
+                            <p class="items">diploma</p>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <input type="text" readonly class="output" placeholder="job type" name="date" maxlength="20">
+                        <div class="lists">
+                            <p class="items">full-time</p>
+                            <p class="items">part-time</p>
+                            <p class="items">intership</p>
+                            <p class="items">contract</p>
+                            <p class="items">temperary</p>
+                            <p class="items">fresher</p>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <input type="text" readonly class="output" placeholder="estimated salary" name="date" maxlength="20">
+                        <div class="lists">
+                            <p class="items">1k or less</p>
+                            <p class="items">1k - 5k</p>
+                            <p class="items">5k - 10k</p>
+                            <p class="items">10k - 20k</p>
+                            <p class="items">20k - 30k</p>
+                            <p class="items">30k - 40k</p>
+                            <p class="items">40k - 50k</p>
+                        </div>
+                    </div>
+                </div>
             </form>
-        </section>
-    </div>
-
-
-    <section class="categories">
-        <h1 class="heading">job categories</h1>
-        <div class="container-categories">
-            <div class="box-categories">
-                <i class="fa-solid fa-code"></i>
-                <div class="info">
-                    <h5>Development</h5>
-                    <p>2300 jobs</p>
-                </div>
-            </div>
-            <div class="box-categories">
-                <i class="fas fa-regular fa-pen"></i>
-                <div class="info">
-                    <h5>Designer</h5>
-                    <p>2000 jobs</p>
-                </div>
-            </div>
-            <div class="box-categories">
-                <i class="fas fa-regular fa-chalkboard-user"></i>
-                <div class="info">
-                    <h5>teacher</h5>
-                    <p>1200 jobs</p>
-                </div>
-            </div>
-            <div class="box-categories">
-                <i class="fas fa-bullhorn"></i>
-                <div class="info">
-                    <h5>Marketing</h5>
-                    <p>1700 jobs</p>
-                </div>
-            </div>
-            <div class="box-categories">
-                <i class="fas fa-brands fa-servicestack"></i>
-                <div class="info">
-                    <h5>Sevice</h5>
-                    <p>2440 jobs</p>
-                </div>
-            </div>  
-            <div class="box-categories">
-                <i class="fas fa-wrench"></i>
-                <div class="info">
-                    <h5>Enginner</h5>
-                    <p>440 jobs</p>
-                </div>
-            </div>
-            <div class="box-categories">
-                <i class="fas fa-regular fa-dice-d20"></i>
-                <div class="info">
-                    <h5>Finance</h5>
-                    <p>220 jobs</p>
-                </div>
-            </div>
-            <div class="box-categories">
-                <i class="fa-solid fa-person-digging"></i>
-                <div class="info">
-                    <h5>Ladour</h5>
-                    <p>140 jobs</p>
-                </div>
-            </div>
         </div>
     </section>
 
-
     <section class="work">
-        <h1 class="heading">latest jobs</h1>
+        <h1 class="heading">All jobs</h1>
         <div class="container-work">
             <div class="box-work">
                 <div class="image">
-                    <img src="public/icons/node-js.png" alt="">
+                    <img src="../public/icons/node-js.png" alt="">
                     <div class="image-info">
                         <h5>Node.js</h5>
                         <p>3 days ago</p>
@@ -130,7 +132,7 @@
             </div>
             <div class="box-work">
                 <div class="image">
-                    <img src="public/icons/html.png" alt="">
+                    <img src="../public/icons/html.png" alt="">
                     <div class="image-info">
                         <h5>HTML 5</h5>
                         <p>6 days ago</p>
@@ -152,7 +154,7 @@
                 </div>
             <div class="box-work">
                 <div class="image">
-                    <img src="public/icons/js.png" alt="">
+                    <img src="../public/icons/js.png" alt="">
                     <div class="image-info">
                         <h5>JavaScript</h5>
                         <p>4 days ago</p>
@@ -174,7 +176,7 @@
                 </div>
             <div class="box-work">
                 <div class="image">
-                    <img src="public/icons/php.png" alt="">
+                    <img src="../public/icons/php.png" alt="">
                     <div class="image-info">
                         <h5>PHP</h5>
                         <p>9 days ago</p>
@@ -196,7 +198,7 @@
                 </div>
             <div class="box-work">
                 <div class="image">
-                    <img src="public/icons/python.png" alt="">
+                    <img src="../public/icons/python.png" alt="">
                     <div class="image-info">
                         <h5>Python</h5>
                         <p>20 days ago</p>
@@ -218,7 +220,7 @@
             </div>
             <div class="box-work">
                 <div class="image">
-                    <img src="public/icons/typescript.png" alt="">
+                    <img src="../public/icons/typescript.png" alt="">
                     <div class="image-info">
                         <h5>TypeScript</h5>
                         <p>25 days ago</p>
@@ -234,37 +236,35 @@
                         <p><i class="fa-solid fa-clock"></i> morning shift</p>
                     </div>
                     <div class="details">
-                        <button class="btn">View Details</button>
+                        <button class="btn view">View Details</button>
                         <i class="fa-regular fa-heart"></i>
                     </div>
                 </div>
             </div>
-            <button class="btn-view view">View All</button>
     </section>
-
 
     <footer>
         <div class="container-footer">
             <div class="box-footer">
                 <h3>quich links</h3>
-                    <a href="index.html"><i class="fa-solid fa-chevron-right"></i> Home</a>
-                    <a href="components/about.html"><i class="fa-solid fa-chevron-right"></i> About</a>
-                    <a href="components/all_jobs.html"><i class="fa-solid fa-chevron-right"></i> All Jobs</a>
-                    <a href="components/contact.html"><i class="fa-solid fa-chevron-right"></i>Contact Us</a>
+                <a href="../index.html"><i class="fa-solid fa-chevron-right"></i> Home</a>
+                <a href="about.html"><i class="fa-solid fa-chevron-right"></i> About</a>
+                <a href="all_jobs.html"><i class="fa-solid fa-chevron-right"></i> All Jobs</a>
+                <a href="contact.html"><i class="fa-solid fa-chevron-right"></i>Contact Us</a>
             </div>
             <div class="box-footer">
                 <h3>extra links</h3>
-                    <a href="auth/logn.html"><i class="fa-solid fa-chevron-right"></i> login</a>
-                    <a href="auth/register.html"><i class="fa-solid fa-chevron-right"></i> Register</a>
-                    <a href="components/acount.html"><i class="fa-solid fa-chevron-right"></i> acount</a>
-                    <a href="#"><i class="fa-solid fa-chevron-right"></i>post job</a>
+                <a href="../auth/logn.html"><i class="fa-solid fa-chevron-right"></i> login</a>
+                <a href="../auth/register.html"><i class="fa-solid fa-chevron-right"></i> Register</a>
+                <a href="../components/acount.html"><i class="fa-solid fa-chevron-right"></i> acount</a>
+                <a href="#"><i class="fa-solid fa-chevron-right"></i>post job</a>
             </div>
             <div class="box-footer">
                 <h3>follow us</h3>
-                    <a href="auth/logn.html"><i class="fa-brands fa-facebook"></i> facebook </a>
-                    <a href="auth/register.html"><i class="fa-brands fa-instagram"></i>instagram</a>
-                    <a href="components/acount.html"><i class="fa-brands fa-linkedin"></i> linkedIn</a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i>twitter</a>
+                <a href="../auth/logn.html"><i class="fa-brands fa-facebook"></i> facebook </a>
+                <a href="../auth/register.html"><i class="fa-brands fa-instagram"></i>instagram</a>
+                <a href="acount.html"><i class="fa-brands fa-linkedin"></i> linkedIn</a>
+                <a href="#"><i class="fa-brands fa-twitter"></i>twitter</a>
             </div>
         </div>
     </footer>
@@ -273,6 +273,7 @@
         <h2>© copyright @2023 by <span>MR.Mohamed Shams</span> | all rights reserved</h2>
     </div>
 
-    <script src="script/script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
+
 </html>
