--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@ body{
     text-transform: uppercase;
 }
 
+.heading-all{
+    text-align: center;
+    letter-spacing: .1rem;
+    font-size: 2rem;
+    color: #2a9d8f;
+    text-transform: uppercase;
+    margin-top: 5rem;
+}
+
 
 
 header .wrapper{
@@ -35,12 +44,14 @@ header .wrapper{
     top: 0;left: 0;right: 0;
     background: #fff;
     border-bottom: 1px solid #0f6bae;
+    z-index: 100;
     
 }
 
 .wrapper a{
     font-size: 1.2rem;
     color: #2a9d8f;
+    z-index: 100;
 }
 
 .wrapper a:hover{
@@ -286,6 +297,302 @@ header .wrapper{
     background-color: #023047;
 }
 
+footer{
+    background: #fff;
+}
+
+.container-footer{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,350px);
+    gap: 2rem;
+
+}
+.box-footer{
+    display: flex;
+    flex-direction: column;
+}
+
+.box-footer h3{
+    margin: 1rem 0;
+    text-transform: capitalize;
+    font-size: 1.5rem;
+    text-align: center;
+    color: #023047;
+}
+
+
+.box-footer a {
+    text-align: start;
+    margin-left: 7rem;
+    margin-bottom: .5rem;
+    color: #0f6bae;
+}
+
+.box-footer a:hover{
+    text-decoration: underline;
+}
+
+.box-footer i {
+    margin-right: 1rem;
+    color: #2839d6;
+}
+
+.copy{
+    text-align: center;
+    padding: .5rem;
+    border-top: 1px solid #ccc;
+}
+
+.copy h2{
+    font-size: 1.3rem;
+    color: #2a9d8f;
+}
+
+.copy span {
+    color: #d62828;
+}
+
+.about-image img{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.about-info
+,.info-me{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.containeer-about-info{
+    width: 80%;
+    background: #fff;
+    margin: 2rem auto;
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.containeer-about-info h1 {
+    color: #023047;
+}
+
+.containeer-about-info p {
+    letter-spacing: .1rem;
+    color: #ccc;
+}
+
+.containeer-about-info .btn {
+    margin-top: 1rem;
+}
+
+.container-info-me{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 350px);
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0;
+}
+
+.box-info-me{
+    text-align: center;
+    background-color: #fff;
+    padding: 1.5rem;
+    border-radius: 5px;
+}
+
+.box-info-me i {
+    margin-bottom:1rem;
+    color: #2839d6;
+    font-size: 2.5rem;
+}
+
+.box-info-me h4 {
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    color: #023047;
+}
+
+.box-info-me p {
+    color: #ccc;
+    font-weight: 700;
+}
+
+.filter-job{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.filter-job form {
+    background-color: #fff;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 1rem;
+}
+
+.filter-job form .flex {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+}
+
+.filter-job form .flex .box {
+    flex: 1;
+}
+
+.filter-job form .flex .box p {
+    font-size: 1.2rem;
+    letter-spacing: .1px;
+}
+
+.filter-job form .flex .box span {
+    color: #d62828;
+}
+
+.filter-job form .flex .box .input {
+    width: 100%;
+    border-radius: 5px;
+    padding: .5rem;
+    border: 1px solid lightgray;
+    margin-top: .5rem;
+    background: #eee;
+}
+
+.dropdown-container{
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.dropdown{
+    flex: 1;
+    position: relative;
+}
+
+.output{
+    width: 100%;
+    background-color: #eee;
+    border-radius: 5px;
+    padding: .5rem;
+    font-size: 1rem;
+    color: #023047;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+}
+
+.output:placeholder-shown{
+    text-transform: capitalize;
+}
+
+.lists{
+    position: absolute;
+    top: 100%; right: 0;left: 0;
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    -webkit-box-shadow: 2px 3px 61px -18px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 3px 61px -18px rgba(0,0,0,0.75);
+    box-shadow: 2px 3px 61px -18px rgba(0,0,0,0.75);
+    z-index: 10;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+
+.items{
+    padding: .7rem 1.4rem;
+    border-radius: 5px;
+    font-size: .9rem;
+    color: #023047;
+    cursor: pointer;
+}
+
+.items:hover{
+    background: #ccc;
+}
+
+.lists:hover,
+.dropdown:hover .lists,
+.dropdown .output:focus + .lists,
+.dropdown .output:focus-within + .lists{
+    transform: scaleX(1);
+}
+
+.details-job{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.container-details-job {
+    margin: 3rem 0;
+}
+
+.box-details-job{
+    background: #fff;
+    border: 1px solid #ccc;
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.box-details-job h3{
+    margin-bottom: .5rem;
+    color: #023047;
+}
+
+.box-details-job .name {
+    color: #2a9d8f;
+    margin-bottom: .3rem;
+}
+
+.box-details-job .loaction{
+    margin-bottom: .3rem;
+    color: #ccc;
+    font-size: .7;
+    font-weight: 500;
+}
+
+.salary{
+    background-color: #eee;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+.box-salary h4{
+    margin-bottom: .1rem;
+    color: #2839d6;
+}
+
+.box-salary p {
+    color: #000;
+    margin-bottom: .5rem;
+}
+
+.dot{
+    margin-bottom: .5rem;
+    color: #ccc;
+    font-weight: 500;
+}
+
+.box-salary span {
+    font-weight: 900;
+}
+
+.desc{
+    margin-bottom: 1rem;
+    color: #ccc;
+}
+
+
 @media (max-width: 768px) {
 
     .navber{
@@ -294,20 +601,35 @@ header .wrapper{
         background-color: #fff;
         border-bottom: 1px solid #0f6bae;
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        z-index: 100;
     }
 
     .navber.active{
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-
+        z-index: 100;
     }
 
     .navber a{
         display: block;
         margin: 1rem 0;
+        z-index: 100;
     }
 
     #menu{
         display: block;
+    }
+
+    .copy h2{
+        font-size: .7rem;
+        color: #2a9d8f;
+    }
+
+    .dropdown-container{
+        display: block;
+    }
+    .output{
+        width: 100%;
+        margin-bottom: 1rem;
     }
 
 }
